Fixed Layout issues w/ restaurant bubbles

--- a/website/resources/css/restaurantBubble.css
+++ b/website/resources/css/restaurantBubble.css
@@ -1,10 +1,12 @@
 /*restaurant */
 #restaurant-ul{
     /*box-sizing: border-box;*/
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    padding-left: 1.5vw;
+    /*display: flex;*/
+    /*flex-direction: row;*/
+    /*flex-wrap: wrap;*/
+    display: grid;
+    grid-template-columns: auto auto auto;
+    margin-left: 4.6vw;
     width: 100%;
     list-style-type: none;
 }
